Fix FAQ overflow & planet title scaling

--- a/src/components/FAQ/faq.css
+++ b/src/components/FAQ/faq.css
@@ -1,11 +1,10 @@
 .faq-container {
     background-image: url('../../assets/backgrounds/FAQ_Bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat-y;
+    background-size: contain;
     background-attachment: local;
-    background-position: 0% 100%;
-    padding: 0 10% 10%;
-    height: 100vh;
+    background-position: 0% 0%;
+    padding: 0 5% 5%;
     color: #ffffff;
     text-align: center;
 }
