--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -150,7 +150,7 @@
     background-color: transparent;
     color: #ffffff;
     border: none;
-    font-size: 2vw;
+    font-size: 1.5vw;
     cursor: pointer;
     font-family: 'Audiowide', cursive;
     text-shadow: 3.5px 3.5px #02111b;
