--- a/src/components/Sponsors/sponsors.css
+++ b/src/components/Sponsors/sponsors.css
@@ -26,7 +26,7 @@
 }
 
 .partner-logo {
-    width: 34%;
+    width: 40%;
     margin-top: 20px;
     height: auto;
 }
